--- a/Fx/src/main/resources/com/example/fx/hello-view.fxml
+++ b/Fx/src/main/resources/com/example/fx/hello-view.fxml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -82,7 +84,13 @@
    <left>
       <AnchorPane BorderPane.alignment="CENTER">
          <children>
-            <Button layoutX="56.0" layoutY="449.0" mnemonicParsing="false" onAction="#demarer" style="-fx-background-color: Black;" text="Button" AnchorPane.bottomAnchor="36.0" AnchorPane.leftAnchor="56.0" AnchorPane.rightAnchor="82.0" />
+            <Button fx:id="Start" layoutX="56.0" layoutY="449.0" mnemonicParsing="false" onAction="#demarer" style="-fx-background-color: Black;" text="Button" AnchorPane.bottomAnchor="36.0" AnchorPane.leftAnchor="56.0" AnchorPane.rightAnchor="82.0" />
+            <Button fx:id="Lancer_De" disable="true" layoutX="69.0" layoutY="243.0" mnemonicParsing="false" onAction="#lancer_De" text="Button" AnchorPane.leftAnchor="69.0" AnchorPane.topAnchor="243.0" />
+            <ImageView fx:id="img2" fitHeight="105.0" fitWidth="111.0" layoutX="34.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="img1" fitHeight="105.0" fitWidth="111.0" layoutX="34.0" layoutY="121.0" pickOnBounds="true" preserveRatio="true" />
+            <Label fx:id="Info" layoutX="1.0" layoutY="293.0" prefHeight="42.0" prefWidth="181.0" text="&quot;Lancer le jeu&quot;" />
+            <Label fx:id="Info2" layoutX="10.0" layoutY="352.0" prefHeight="42.0" prefWidth="181.0" text="&quot;Votre Score est : 0&quot;" />
+            <Label fx:id="Info3" layoutX="10.0" layoutY="394.0" prefHeight="42.0" prefWidth="181.0" text="&quot;Votre case Actuel : 0&quot;" />
          </children>
       </AnchorPane>
    </left>
