--- a/Fx/src/main/resources/com/example/fx/hello-view.fxml
+++ b/Fx/src/main/resources/com/example/fx/hello-view.fxml
@@ -91,6 +91,7 @@
             <Label fx:id="Info" layoutX="1.0" layoutY="293.0" prefHeight="42.0" prefWidth="181.0" text="&quot;Lancer le jeu&quot;" />
             <Label fx:id="Info2" layoutX="10.0" layoutY="352.0" prefHeight="42.0" prefWidth="181.0" text="&quot;Votre Score est : 0&quot;" />
             <Label fx:id="Info3" layoutX="10.0" layoutY="394.0" prefHeight="42.0" prefWidth="181.0" text="&quot;Votre case Actuel : 0&quot;" />
+            <Label fx:id="Info4" layoutX="1.0" layoutY="320.0" prefHeight="42.0" prefWidth="181.0" text="Text" visible="false" />
          </children>
       </AnchorPane>
    </left>
