--- a/Fx/src/main/resources/com/example/fx/Question.fxml
+++ b/Fx/src/main/resources/com/example/fx/Question.fxml
@@ -2,27 +2,32 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fx.QuestionController">
    <children>
-      <Label fx:id="NumQues" alignment="TOP_CENTER" contentDisplay="TOP" layoutX="124.0" layoutY="30.0" prefHeight="43.0" prefWidth="353.0" text="Question" textAlignment="CENTER" textOverrun="CENTER_WORD_ELLIPSIS">
+      <Label fx:id="NumQues" alignment="TOP_CENTER" contentDisplay="TOP" layoutX="124.0" layoutY="30.0" prefHeight="43.0" prefWidth="353.0" text="Definition" textAlignment="CENTER" textOverrun="CENTER_WORD_ELLIPSIS">
          <font>
             <Font size="33.0" />
          </font>
       </Label>
-      <Label fx:id="Question" layoutX="92.0" layoutY="104.0" prefHeight="43.0" prefWidth="226.0" text="La question">
+      <Label fx:id="Question" alignment="TOP_LEFT" layoutX="3.0" layoutY="104.0" prefHeight="105.0" prefWidth="594.0" text="la definition">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Button fx:id="Sub" layoutX="269.0" layoutY="293.0" mnemonicParsing="false" onAction="#Submit" text="Submit" />
-      <RadioButton fx:id="sug1" layoutX="145.0" layoutY="191.0" mnemonicParsing="false" text="RadioButton" />
-      <RadioButton fx:id="sug3" layoutX="145.0" layoutY="227.0" mnemonicParsing="false" text="RadioButton" />
-      <RadioButton fx:id="sug2" layoutX="347.0" layoutY="182.0" mnemonicParsing="false" text="RadioButton" />
-      <RadioButton fx:id="sug4" layoutX="347.0" layoutY="227.0" mnemonicParsing="false" text="RadioButton" />
-      <Label fx:id="Aswr" layoutX="110.0" layoutY="333.0" prefHeight="43.0" prefWidth="375.0" />
+      <Button fx:id="Sub" layoutX="265.0" layoutY="309.0" mnemonicParsing="false" onAction="#Submit" text="Submit" />
+      <Label fx:id="Aswr" alignment="CENTER" layoutX="110.0" layoutY="343.0" prefHeight="43.0" prefWidth="375.0" text="il faut Remplir tous les champs " textAlignment="CENTER" textFill="#e80303" visible="false">
+         <font>
+            <Font size="14.0" />
+         </font></Label>
+      <Label layoutX="32.0" layoutY="240.0" prefHeight="33.0" prefWidth="330.0" text="Le mot correspondant a cette definition est :">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <HBox fx:id="hbox" layoutX="349.0" layoutY="245.0" prefHeight="24.0" prefWidth="247.0" />
    </children>
 </AnchorPane>
