--- a/Fx/src/main/resources/com/example/fx/Question.fxml
+++ b/Fx/src/main/resources/com/example/fx/Question.fxml
@@ -18,16 +18,17 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <Button fx:id="Sub" layoutX="265.0" layoutY="309.0" mnemonicParsing="false" onAction="#Submit" text="Submit" />
+      <Button fx:id="Sub" layoutX="268.0" layoutY="341.0" mnemonicParsing="false" onAction="#Submit" text="Submit" />
       <Label fx:id="Aswr" alignment="CENTER" layoutX="110.0" layoutY="343.0" prefHeight="43.0" prefWidth="375.0" text="il faut Remplir tous les champs " textAlignment="CENTER" textFill="#e80303" visible="false">
          <font>
             <Font size="14.0" />
          </font></Label>
-      <Label layoutX="32.0" layoutY="240.0" prefHeight="33.0" prefWidth="330.0" text="Le mot correspondant a cette definition est :">
+      <Label layoutX="3.0" layoutY="241.0" prefHeight="33.0" prefWidth="330.0" text="Le mot correspondant a cette definition est :">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <HBox fx:id="hbox" layoutX="349.0" layoutY="245.0" prefHeight="24.0" prefWidth="247.0" />
+      <HBox fx:id="hbox" layoutX="318.0" layoutY="246.0" prefHeight="24.0" prefWidth="247.0" />
+      <Button fx:id="del" layoutX="538.0" layoutY="274.0" mnemonicParsing="false" onAction="#Delete" prefHeight="14.0" prefWidth="27.0" />
    </children>
 </AnchorPane>
