--- a/Fx/src/main/resources/com/example/fx/hello-view.fxml
+++ b/Fx/src/main/resources/com/example/fx/hello-view.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -48,6 +49,13 @@
                         <RowConstraints maxHeight="1.7976931348623157E308" vgrow="ALWAYS" />
                         <RowConstraints maxHeight="1.7976931348623157E308" vgrow="ALWAYS" />
                     </rowConstraints>
+               <children>
+                  <ImageView fx:id="monkey" fitHeight="46.0" fitWidth="56.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="1">
+                     <image>
+                        <Image url="@../../../Monkey/monkey.png" />
+                     </image>
+                  </ImageView>
+               </children>
                 </GridPane>
             </children>
         </AnchorPane>
