--- a/src/main/resources/com/example/fx/hello-view.fxml
+++ b/src/main/resources/com/example/fx/hello-view.fxml
@@ -11,7 +11,9 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <BorderPane prefHeight="698.0" prefWidth="1114.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fx.HelloController">
@@ -83,61 +85,92 @@
         </MenuBar>
     </top>
     <left>
-      <AnchorPane prefHeight="1168.0" prefWidth="289.0">
-         <children>
-                    <ImageView fx:id="img2" fitHeight="98.0" fitWidth="109.0" layoutX="6.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true" />
-                    <ImageView fx:id="img1" fitHeight="99.0" fitWidth="118.0" layoutX="171.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true" />
-                  <ImageView fitHeight="49.0" fitWidth="200.0" layoutX="70.0" layoutY="162.0" pickOnBounds="true" preserveRatio="true">
-                      <image>
-                          <Image url="@../../../Img/122.PNG" />
-                      </image>
-                  </ImageView>
-                  <Button fx:id="Lancer_De" disable="true" layoutX="76.0" layoutY="335.0" mnemonicParsing="false" onAction="#lancer_De" prefHeight="63.0" prefWidth="148.0" style="-fx-background-image: src/main/resourcess/Img/122.PNG; -fx-background-color: transparent;" text="Roll" textFill="WHITE">
-                      <font>
-                          <Font name="System Bold" size="29.0" />
-                      </font>
-                  </Button>
-                  <ImageView fitHeight="245.0" fitWidth="309.0" layoutX="6.0" layoutY="298.0" pickOnBounds="true" preserveRatio="true">
-                      <image>
-                          <Image url="@123.PNG" />
-                      </image>
-                  </ImageView>
-                  <Label layoutX="90.0" layoutY="317.0" prefHeight="36.0" prefWidth="111.0" text="Score" textAlignment="RIGHT" textFill="WHITE">
-                      <font>
-                          <Font name="System Bold Italic" size="30.0" />
-                      </font>
+        <VBox alignment="CENTER">
+            <children>
+                <HBox fx:id="de" alignment="CENTER">
+                    <children>
+                        <VBox id="dee" fx:id="dee" alignment="CENTER" stylesheets="@bground.css">
+                            <children>
+                                <ImageView fx:id="img2" fitHeight="98.0" fitWidth="109.0" pickOnBounds="true" preserveRatio="true" />
+                            </children>
+                        </VBox>
+                        <VBox fx:id="dee" alignment="CENTER" stylesheets="@bground.css">
+                            <children>
+                                <ImageView fx:id="img1" fitHeight="99.0" fitWidth="118.0" pickOnBounds="true" preserveRatio="true" />
+                            </children>
+                        </VBox>
+                    </children>
+                </HBox>
+                <AnchorPane>
+                    <children>
+                        <ImageView fitHeight="49.0" fitWidth="200.0" layoutX="60.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@../../../Img/122.PNG" />
+                            </image>
+                        </ImageView>
+                        <Button fx:id="Lancer_De" disable="true" layoutX="66.0" layoutY="-5.0" mnemonicParsing="false" onAction="#lancer_De" prefHeight="63.0" prefWidth="148.0" style="-fx-background-image: src/main/resourcess/Img/122.PNG; -fx-background-color: transparent;" text="Roll" textFill="WHITE">
+                            <font>
+                                <Font name="System Bold" size="29.0" />
+                            </font>
+                        </Button>
+                    </children>
+                </AnchorPane>
+                <AnchorPane>
+                    <children>
+                        <ImageView fitHeight="400.0" fitWidth="300.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@123.PNG" />
+                            </image>
+                        </ImageView>
+                        <Label layoutX="95.0" layoutY="21.0" prefHeight="36.0" prefWidth="111.0" text="Score" textAlignment="RIGHT" textFill="WHITE">
+                            <font>
+                                <Font name="System Bold Italic" size="30.0" />
+                            </font>
+                        </Label>
+                        <Label layoutX="100.0" layoutY="104.0" prefHeight="45.0" prefWidth="87.0" text="Case" textAlignment="RIGHT" textFill="WHITE">
+                            <font>
+                                <Font name="System Bold Italic" size="30.0" />
+                            </font>
+                        </Label>
+                        <AnchorPane layoutX="79.0" layoutY="149.0">
+                            <children>
+                                <ImageView fitHeight="35.0" fitWidth="102.0" layoutX="17.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
+                                    <image>
+                                        <Image url="@../../../Img/124.PNG" />
+                                    </image>
+                                </ImageView>
+                                <Label fx:id="Info3" alignment="CENTER" layoutX="38.0" layoutY="1.0" prefHeight="43.0" prefWidth="53.0" text="0" textFill="WHITE">
+                                    <font>
+                                        <Font size="29.0" />
+                                    </font>
+                                </Label>
+                            </children>
+                        </AnchorPane>
+                        <AnchorPane layoutX="92.0" layoutY="68.0">
+                            <children>
+                                <ImageView fitHeight="35.0" fitWidth="102.0" pickOnBounds="true" preserveRatio="true">
+                                    <image>
+                                        <Image url="@../../../Img/124.PNG" />
+                                    </image>
+                                </ImageView>
+                                <Label fx:id="Info2" alignment="CENTER" layoutX="16.0" layoutY="-7.0" prefHeight="43.0" prefWidth="70.0" text="0" textAlignment="JUSTIFY" textFill="WHITE" textOverrun="CLIP">
+                                    <font>
+                                        <Font name="Arial Narrow Bold" size="29.0" />
+                                    </font>
+                                </Label>
+                            </children>
+                        </AnchorPane>
+                      <Label fx:id="Info" alignment="CENTER" layoutX="23.0" layoutY="193.0" prefHeight="42.0" prefWidth="255.0" text="&quot;Start the Game ...&quot;" textAlignment="CENTER" textFill="#e80b0b">
+                     <font>
+                        <Font name="System Bold Italic" size="13.0" />
+                     </font>
                   </Label>
-                  <Label layoutX="96.0" layoutY="409.0" prefHeight="45.0" prefWidth="87.0" text="Case" textAlignment="RIGHT" textFill="WHITE">
-                      <font>
-                          <Font name="System Bold Italic" size="30.0" />
-                      </font>
-                  </Label>
-                    <ImageView fitHeight="35.0" fitWidth="102.0" layoutX="82.0" layoutY="454.0" pickOnBounds="true" preserveRatio="true">
-                        <image>
-                            <Image url="@../../../Img/124.PNG" />
-                        </image>
-                    </ImageView>
-                    <Label fx:id="Info2" layoutX="105.0" layoutY="449.0" prefHeight="43.0" prefWidth="70.0" text="0" textAlignment="JUSTIFY" textFill="WHITE" textOverrun="CLIP">
-                        <font>
-                            <Font name="Arial Narrow Bold" size="29.0" />
-                        </font>
-                    </Label>
-                <Label fx:id="info2" layoutX="106.0" layoutY="743.0" text="Label" />
-                <Label fx:id="Info" layoutX="70.0" layoutY="774.0" prefHeight="16.0" prefWidth="108.0" text="&quot;Lancer le jeu&quot;" />
-                <Button fx:id="Start" layoutX="115.0" layoutY="805.0" mnemonicParsing="false" onAction="#demarer" style="-fx-background-color: #fdbd76;" textFill="WHITE" />
-                <Button fx:id="quit" layoutX="115.0" layoutY="846.0" mnemonicParsing="false" onAction="#quitter" style="-fx-background-color: #fdbd76;" textFill="WHITE" />
-                <Label fx:id="Info4" layoutX="60.0" layoutY="1285.0" prefHeight="42.0" prefWidth="181.0" text="Text" visible="false" />
-                    <ImageView fitHeight="35.0" fitWidth="102.0" layoutX="89.0" layoutY="350.0" pickOnBounds="true" preserveRatio="true">
-                        <image>
-                            <Image url="@../../../Img/124.PNG" />
-                        </image>
-                    </ImageView>
-            <Label fx:id="Info3" layoutX="107.0" layoutY="345.0" prefHeight="43.0" prefWidth="53.0" text="0" textFill="WHITE">
-               <font>
-                  <Font size="29.0" />
-               </font>
-            </Label>
-         </children>
-      </AnchorPane>
+                    </children>
+                </AnchorPane>
+                <Button fx:id="Start" mnemonicParsing="false" onAction="#demarer" style="-fx-background-color: #fdbd76;" textFill="WHITE" />
+                <Button fx:id="quit" mnemonicParsing="false" onAction="#quitter" style="-fx-background-color: #fdbd76;" textFill="WHITE" />
+                <Label fx:id="Info4" prefHeight="42.0" prefWidth="181.0" text="Text" visible="false" />
+            </children>
+        </VBox>
     </left>
 </BorderPane>
