--- a/src/main/resources/com/example/fx/Aceuill.fxml
+++ b/src/main/resources/com/example/fx/Aceuill.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -39,12 +40,20 @@
                   <Button fx:id="newgame" layoutX="62.0" layoutY="103.0" mnemonicParsing="false" onAction="#Newgame" prefHeight="59.0" prefWidth="244.0" style="-fx-background-color: transparent;" />
                   <Button fx:id="cnt" layoutX="68.0" layoutY="180.0" mnemonicParsing="false" onAction="#Loadgame" prefHeight="67.0" prefWidth="244.0" style="-fx-background-color: transparent;" />
                   <Button fx:id="ex" layoutX="68.0" layoutY="258.0" mnemonicParsing="false" onAction="#Exit" prefHeight="67.0" prefWidth="244.0" style="-fx-background-color: transparent;" />
-                  <TextField fx:id="name" layoutX="73.0" layoutY="41.0" prefHeight="42.0" prefWidth="222.0" />
-                  <Label fx:id="mess" layoutX="116.0" layoutY="83.0" prefHeight="17.0" prefWidth="137.0" textFill="RED">
+                  <TextField fx:id="name" layoutX="29.0" layoutY="40.0" prefHeight="42.0" prefWidth="222.0" promptText="what is your name ! ">
                      <font>
-                        <Font name="System Bold Italic" size="15.0" />
+                        <Font size="14.0" />
+                     </font></TextField>
+                  <Label fx:id="username" alignment="CENTER" layoutX="29.0" layoutY="82.0" prefHeight="19.0" prefWidth="222.0" text="you didn't save any game" textAlignment="CENTER" textFill="#f80000" visible="false">
+                     <font>
+                        <Font name="System Bold Italic" size="13.0" />
                      </font>
                   </Label>
+                  <CheckBox fx:id="newuser" layoutX="262.0" layoutY="52.0" mnemonicParsing="false" text="new user" textFill="#863d18">
+                     <font>
+                        <Font name="System Bold Italic" size="13.0" />
+                     </font>
+                  </CheckBox>
                </children>
             </AnchorPane>
          </children>
