--- a/src/main/resources/com/example/fx/Fin.fxml
+++ b/src/main/resources/com/example/fx/Fin.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -8,72 +9,82 @@
 
 <AnchorPane fx:id="question" prefHeight="514.0" prefWidth="504.0" style="-fx-background-color: transparent;" stylesheets="@bground.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fx.FinController">
    <children>
-      <Label layoutX="130.0" layoutY="14.0" prefHeight="77.0" prefWidth="236.0" text="Congratulations">
+      <Label layoutX="120.0" layoutY="122.0" prefHeight="34.0" prefWidth="69.0" text="Score ">
          <font>
-            <Font name="System Bold Italic" size="30.0" />
+            <Font name="System Bold Italic" size="17.0" />
          </font>
       </Label>
-      <Label layoutX="179.0" layoutY="110.0" prefHeight="34.0" prefWidth="153.0" text="Your Score is:">
-         <font>
-            <Font size="23.0" />
-         </font>
-      </Label>
-      <AnchorPane layoutX="152.0" layoutY="138.0" prefHeight="77.0" prefWidth="200.0">
+      <AnchorPane layoutX="62.0" layoutY="157.0" prefHeight="77.0" prefWidth="184.0">
          <children>
             <ImageView fitHeight="53.0" fitWidth="200.0" layoutX="19.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../../Img/124.PNG" />
                </image>
             </ImageView>
-            <Label fx:id="score" alignment="CENTER" layoutX="66.0" layoutY="14.0" prefHeight="35.0" prefWidth="69.0" text="0" textFill="WHITE">
+            <Label fx:id="score" alignment="CENTER" layoutX="66.0" layoutY="23.0" prefHeight="35.0" prefWidth="69.0" text="0" textFill="WHITE">
                <font>
-                  <Font name="System Bold" size="37.0" />
+                  <Font name="System Bold" size="30.0" />
                </font>
             </Label>
          </children>
       </AnchorPane>
-      <Label layoutX="161.0" layoutY="240.0" prefHeight="34.0" prefWidth="206.0" text="Your best Score is:">
+      <Label layoutX="253.0" layoutY="122.0" prefHeight="34.0" prefWidth="176.0" text="Your best Score ">
          <font>
-            <Font size="23.0" />
+            <Font name="System Bold Italic" size="14.0" />
          </font>
       </Label>
-      <AnchorPane layoutX="156.0" layoutY="265.0" prefHeight="77.0" prefWidth="200.0">
+      <AnchorPane layoutX="241.0" layoutY="157.0" prefHeight="77.0" prefWidth="200.0">
          <children>
             <ImageView fitHeight="53.0" fitWidth="200.0" layoutX="19.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../../Img/124.PNG" />
                </image>
             </ImageView>
-            <Label fx:id="bestjrscore" alignment="CENTER" layoutX="66.0" layoutY="14.0" prefHeight="35.0" prefWidth="69.0" text="0" textFill="WHITE">
+            <Label fx:id="bestjrscore" alignment="CENTER" layoutX="66.0" layoutY="23.0" prefHeight="35.0" prefWidth="69.0" text="0" textFill="WHITE">
                <font>
-                  <Font name="System Bold" size="37.0" />
+                  <Font name="System Bold" size="30.0" />
                </font>
             </Label>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="155.0" layoutY="368.0" prefHeight="77.0" prefWidth="200.0">
+      <AnchorPane layoutX="154.0" layoutY="288.0" prefHeight="77.0" prefWidth="200.0">
          <children>
             <ImageView fitHeight="53.0" fitWidth="200.0" layoutX="19.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../../Img/124.PNG" />
                </image>
             </ImageView>
-            <Label fx:id="bestjscore" alignment="CENTER" contentDisplay="CENTER" layoutX="66.0" layoutY="12.0" prefHeight="35.0" prefWidth="69.0" text="0" textAlignment="CENTER" textFill="WHITE">
-               <font>
-                  <Font name="System Bold" size="37.0" />
-               </font>
-            </Label>
          </children>
       </AnchorPane>
-      <Label layoutX="172.0" layoutY="342.0" prefHeight="34.0" prefWidth="184.0" text="The best Score is:">
+      <Label alignment="CENTER" layoutX="173.0" layoutY="263.0" prefHeight="34.0" prefWidth="163.0" text="The best Score ">
          <font>
-            <Font size="23.0" />
+            <Font name="System Bold Italic" size="14.0" />
          </font>
       </Label>
-      <Label fx:id="morebestscore" alignment="CENTER" layoutX="85.0" layoutY="215.0" prefHeight="27.0" prefWidth="338.0" text="Congratulations !! You get more than your best score" textFill="RED" visible="false">
+      <Label fx:id="morebestscore" alignment="CENTER" layoutX="80.0" layoutY="234.0" prefHeight="34.0" prefWidth="342.0" text="Congratulations !! You get more than your best score" textFill="RED" visible="false">
          <font>
             <Font name="System Bold Italic" size="12.0" />
          </font>
       </Label>
+      <AnchorPane layoutX="136.0" layoutY="326.0" prefHeight="133.0" prefWidth="172.0">
+         <children>
+            <ImageView fitHeight="101.0" fitWidth="125.0" layoutX="53.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../Img/home-removebg-preview.png" />
+               </image>
+            </ImageView>
+            <Button fx:id="newbutton" layoutX="58.0" layoutY="37.0" mnemonicParsing="false" onAction="#Newbutton" prefHeight="85.0" prefWidth="106.0" style="-fx-background-color: transparent;" />
+            <Label fx:id="bestjscore" alignment="CENTER" contentDisplay="CENTER" layoutX="85.0" layoutY="-16.0" prefHeight="35.0" prefWidth="69.0" text="0" textAlignment="CENTER" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="30.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
+      <ImageView fitHeight="108.0" fitWidth="191.0" layoutX="155.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../Img/winn-removebg-preview.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
